tests/fixtures/errors/module_not_found.lox
import "self:tests/fixtures/modules/does_not_exist.lox" as dne;
var x = dne::something;
